fluxcd/catalog/monitoring/alertmanager/network-policies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: alertmanager-allow-any
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: alertmanager
      app.kubernetes.io/managed-by: prometheus-operator
      app.kubernetes.io/name: alertmanager
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
